Added telegram notifications

--- a/app/views/layouts/_admin_header.html.erb
+++ b/app/views/layouts/_admin_header.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-inverse">
   <div class="container">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -7,12 +7,12 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
       </button>
-      <%= link_to 'PtzCamp', root_path, :class => 'navbar-brand' %>
+      <%= link_to 'Admin', admin_path, :class => 'navbar-brand' %>
     </div>
 
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
-        <li><%= link_to('', '#') %></li>
+        <li><%= link_to 'Messages', admin_messages_path %></li>
         <li><%= link_to('', '#') %></li>
         <li><%= link_to('', '#') %></li>
       </ul>
