--- a/app/views/layouts/_admin_header.html.erb
+++ b/app/views/layouts/_admin_header.html.erb
@@ -13,8 +13,7 @@
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
         <li><%= link_to 'Messages', admin_messages_path %></li>
-        <li><%= link_to('', '#') %></li>
-        <li><%= link_to('', '#') %></li>
+        <li><%= link_to 'Camps', admin_camps_path %></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <% if user_signed_in? %>
