--- a/app/views/admin/camps/_form.html.erb
+++ b/app/views/admin/camps/_form.html.erb
@@ -2,5 +2,5 @@
   <%= f.input :title %>
   <%= f.input :slug %>
   <%= f.input :telegram_intro %>
-  <%= f.button :submit %>
+  <%= f.button :submit, class: 'btn btn-default btn-lg btn-block' %>
 <% end %>
