--- a/app/views/admin/messages/_form.html.erb
+++ b/app/views/admin/messages/_form.html.erb
@@ -1,4 +1,4 @@
 <%= simple_form_for @message, url: admin_messages_path do |f| %>
   <%= f.input :text %>
-  <%= f.button :submit %>
+  <%= f.button :submit, class: 'btn btn-default btn-lg btn-block' %>
 <% end %>
