--- a/app/views/admin/camps/index.html.erb
+++ b/app/views/admin/camps/index.html.erb
@@ -1,4 +1,4 @@
-<%= link_to 'New camp', new_admin_camp_path, class: 'btn btn-default btn-lg btn-block' %>
+<%= link_to 'New camp', new_admin_camp_path, class: 'btn btn-primary' %>
 
 <hr>
 
