--- a/app/views/admin/messages/_form.html.erb
+++ b/app/views/admin/messages/_form.html.erb
@@ -1,4 +1,6 @@
-<%= simple_form_for @message, url: admin_messages_path do |f| %>
-  <%= f.input :text %>
-  <%= f.button :submit, class: 'btn btn-default btn-lg btn-block' %>
-<% end %>
+<div class="col-xs-6 col-xs-offset-3">
+	<%= simple_form_for @message, url: admin_messages_path do |f| %>
+	  <%= f.input :text, input_html: { rows: 10 } %>
+	  <%= f.button :submit, class: 'btn btn-primary' %>
+	<% end %>
+</div>
