--- a/app/views/admin/messages/index.html.erb
+++ b/app/views/admin/messages/index.html.erb
@@ -1,4 +1,7 @@
-<%= link_to 'New message', new_admin_message_path, class: 'btn btn-default btn-lg btn-block' %>
+<%= link_to 'New message', new_admin_message_path, class: 'btn btn-primary' %>
+
+<hr>
+
 <table class="table">
   <thead>
     <tr>
