--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -13,7 +13,7 @@
     <div class="container">
       <%= render 'layouts/flash_messages' %>
       <div class="row">
-        <div class="center-block" style="width: 768px;">
+        <div class="center-block" style="margin: 0 10%;">
           <%= yield %>
         </div>
       </div>
