--- a/app/views/admin/day_schedules/_form.html.erb
+++ b/app/views/admin/day_schedules/_form.html.erb
@@ -3,7 +3,7 @@
   <hr>
   <%= simple_form_for @day_schedule, url: admin_day_schedule_path(@day_schedule) do |f| %>
     <%= f.input :date, as: :date, html5: true, disabled: true %>
-    <%= f.input :content %>
+    <%= f.input :content, input_html: { rows: 8 } %>
     <%= f.button :submit, class: 'btn btn-primary' %>
   <% end %>
 </div>
