--- a/app/views/admin/camps/index.html.erb
+++ b/app/views/admin/camps/index.html.erb
@@ -5,7 +5,7 @@
 <ul class="list-group">
   <% @camps.each do |camp| %>
     <li class="list-group-item" style="text-align: center">
-      <%= link_to camp.title, edit_admin_camp_path(camp) %>
+      <%= link_to camp.title, admin_camp_path(camp) %>
     </li>
   <% end %>
 </ul>
