--- a/app/views/site/home.html.slim
+++ b/app/views/site/home.html.slim
@@ -1,3 +1,3 @@
 - unless user_signed_in?
-  No campaign created. Please sign in and create something
+  | No camp created. Please sign in and create something
 
