--- a/app/views/camps/show.html.slim
+++ b/app/views/camps/show.html.slim
@@ -1,1 +1,5 @@
 h1 = @camp.title
+
+- if can? :sign_up, @camp
+  p Here you can register to the camp.
+  = render 'participants/form', participant: @camp.build_participant(current_user)
