--- a/app/views/layouts/_admin_header.html.slim
+++ b/app/views/layouts/_admin_header.html.slim
@@ -9,10 +9,19 @@ nav.navbar.navbar-inverse
       = link_to 'Admin', admin_path, class: 'navbar-brand'
     .navbar-collapse.collapse#navbar
       ul.nav.navbar-nav
-        li = link_to 'Site', root_path
         li = link_to 'Messages', admin_messages_path
         li = link_to 'Camps', admin_camps_path
+        - if @camp&.persisted?
+          li
+            = link_to '#', class: 'dropdown-toggle', data: {toggle: 'dropdown'} do
+              = @camp.title
+              <b class="caret"></b>
+            ul.dropdown-menu.multi-level
+              li = link_to 'Delegations', @camp.delegations_path
+              li = link_to 'Schedule', @camp.day_schedules_path
+
       ul.nav.navbar-nav.navbar-right
+        li = link_to 'Site', root_path
         - if user_signed_in?
           li = link_to 'My account', edit_user_registration_path
           li = link_to 'Sign out', destroy_user_session_path, method: :delete
