--- a/app/views/devise/shared/_socials.html.slim
+++ b/app/views/devise/shared/_socials.html.slim
@@ -1,7 +1,8 @@
 - if devise_mapping.omniauthable?
-  - User.omniauth_providers.each do |provider|
-    = link_to public_send("user_#{provider}_omniauth_authorize_path", provider), class: 'btn btn-default' do
-      = omniauth_icon(provider)
-      = ' '
-      = OmniAuth::Utils.camelize(provider)
-    | &nbsp;
+  .form-group
+    - User.omniauth_providers.each do |provider|
+      = link_to public_send("user_#{provider}_omniauth_authorize_path", provider), class: 'btn btn-default' do
+        = omniauth_icon(provider)
+        = ' '
+        = OmniAuth::Utils.camelize(provider)
+      | &nbsp;
