Fixed participant show page and assets

--- a/app/views/admin/participants/show.html.slim
+++ b/app/views/admin/participants/show.html.slim
@@ -17,5 +17,6 @@ dl
     dd = @participant.personal.public_send(key)
   dt Passport scan
   dd
-    = link_to @participant.passport_scan.url, target: :_blank do
-      = image_tag @participant.passport_scan.thumb.url
+    - if @participant.passport_scan.url.present?
+      = link_to @participant.passport_scan.url, target: :_blank do
+        = image_tag @participant.passport_scan.thumb.url
