--- a/app/views/admin/participants/index.html.slim
+++ b/app/views/admin/participants/index.html.slim
@@ -13,9 +13,9 @@ table.table
       tr
         td = participant.id
         td = participant.user_id
-        td = link_to participant.name, admin_camp_participant_path(@camp, participant)
+        td = link_to participant.name, admin_camp_participant_path(@camp, participant) if can?(:show, participant)
         td
-          = link_to 'Edit', edit_admin_camp_participant_path(@camp, participant), class: 'btn btn-xs btn-success'
-          = link_to 'Destroy', admin_camp_participant_path(@camp, participant), data: {method: :delete}, class: 'btn btn-xs btn-danger'
+          = link_to 'Edit', edit_admin_camp_participant_path(@camp, participant), class: 'btn btn-xs btn-success' if can?(:edit, participant)
+          = link_to 'Destroy', admin_camp_participant_path(@camp, participant), data: {method: :delete, confirm: 'Are you sure you want to delete participant? All their data will not be available to recover later.'}, class: 'btn btn-xs btn-danger' if can?(:destroy, participant)
 
 
