--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -13,6 +13,7 @@ nav.navbar.navbar-default
           li = link_to 'Schedule', camp_schedule_path(@camp)
           li = link_to 'Teams', camp_teams_path(@camp)
           li = link_to 'Participants', camp_participants_path(@camp)
+          li = link_to 'My participants', my_camp_participants_path(@camp) if can?(:index_my, Participant)
         = render 'layouts/page_menu'
       ul.nav.navbar-nav.navbar-right
         - if user_signed_in?
