--- a/app/views/admin/participants/_list.html.slim
+++ b/app/views/admin/participants/_list.html.slim
@@ -1,3 +1,11 @@
+br
+br
+b Order
+br
+= link_to 'By date', url_for(order_by: :date), class: 'btn btn-default'
+= link_to 'By name', url_for(order_by: :name), class: 'btn btn-default'
+= link_to 'By delegation', url_for(order_by: :delegation), class: 'btn btn-default'
+
 table.table
   thead
     tr
