--- a/app/views/layouts/_footer.html.slim
+++ b/app/views/layouts/_footer.html.slim
@@ -1,19 +1,24 @@
 footer
   .container
     .row
-        .col-xs-1.vcenter
-          h4 Sponsors
-        .col-xs-11.vcenter.sponsors
-          .sponsor-item
-            = link_to 'https://yandex.com' do
-              = image_tag 'yandex.gif'
-          .sponsor-item
-            = link_to 'http://aimtech.com' do
-              = image_tag 'aim_tech.png'
-          .sponsor-item
-            = link_to 'http://botaninvestments.com' do
-              = image_tag 'botan.png'
-          .sponsor-item
-            = link_to 'http://www.huawei.com/en/' do
-              = image_tag 'huawei.png'
-
+      .vcenter
+        h4 Partners
+      .sponsors.vcenter
+        .sponsor-item
+          = link_to 'https://it-edu.mipt.ru/ru/about_workshops' do
+            = image_tag 'msc_workshops.png'
+      .vcenter.sponsors-title
+        h4 Sponsors
+      .vcenter.sponsors
+        .sponsor-item
+          = link_to 'https://yandex.com' do
+            = image_tag 'yandex.gif'
+        .sponsor-item
+          = link_to 'http://aimtech.com' do
+            = image_tag 'aim_tech.png'
+        .sponsor-item
+          = link_to 'http://botaninvestments.com' do
+            = image_tag 'botan.png'
+        .sponsor-item
+          = link_to 'http://www.huawei.com/en/' do
+            = image_tag 'huawei.png'
