--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -11,6 +11,7 @@ nav.navbar.navbar-default
       ul.nav.navbar-nav
         - if @camp
           li = link_to 'Schedule', camp_schedule_path(@camp)
+          li = link_to 'Teams', camp_teams_path(@camp)
         = render 'layouts/page_menu'
       ul.nav.navbar-nav.navbar-right
         - if user_signed_in?
