--- a/app/views/layouts/_admin_header.html.slim
+++ b/app/views/layouts/_admin_header.html.slim
@@ -26,6 +26,7 @@ nav.navbar.navbar-inverse
               li = link_to 'Pages', [:admin, @camp, :pages] if can?(:index, Page)
               li = link_to 'Badges', [:badges, :admin, @camp], target: '_blank' if can?(:badges, @camp)
               li = link_to 'Teams', [:admin, @camp, :teams] if can?(:index, Team)
+              li = link_to 'Events', [:admin, @camp, :events] if can?(:index, Event)
 
       ul.nav.navbar-nav.navbar-right
         li = link_to 'Site', root_path
