--- a/app/views/schedule/show.html.slim
+++ b/app/views/schedule/show.html.slim
@@ -4,7 +4,7 @@
       <div class="ptzcamp-schedule__column">
     .panel.ptzcamp-schedule__day class="#{day.current? ? 'active' : ''}"
       b = day.title
-      == simple_format(day.content)
+      == simple_format(day.content, {}, sanitize: false)
 
     - if (i + 1) % 3 == 0
       </div>
