Removed Events header on no events; redis session store

--- a/app/views/admin/site/home.html.slim
+++ b/app/views/admin/site/home.html.slim
@@ -1,1 +1,1 @@
-= link_to "Dashboard (#{@camp&.title})", dashboard_admin_camp_path(@camp)
+= link_to "Dashboard (#{@camp&.title})", dashboard_admin_camp_path(@camp) if @camp
