Migrated to Rails 5.1/webpacker/yarn

--- a/app/views/admin/camps/badges.html.slim
+++ b/app/views/admin/camps/badges.html.slim
@@ -2,7 +2,7 @@
   .camp-badge
     .camp-badge_header
       div
-        = image_tag 'petrsu.svg'
+        = image_tag asset_pack_path('images/petrsu.svg')
       .camp-badge_header-title Petrozavodsk State University
     .camp-badge_body
       .camp-badge_body-role
