--- a/app/views/layouts/admin.html.slim
+++ b/app/views/layouts/admin.html.slim
@@ -3,8 +3,10 @@ html
   head
     title PtzCamp
     = csrf_meta_tags
-    = stylesheet_link_tag 'admin', media: 'all', 'data-turbolinks-track': 'reload'
-    = javascript_include_tag 'admin', 'data-turbolinks-track': 'reload'
+    = javascript_include_tag "https://cdn.ckeditor.com/4.7.1/standard/ckeditor.js"
+    = javascript_pack_tag 'admin', 'data-turbolinks-track': 'reload'
+    = stylesheet_pack_tag 'admin', media: 'all', 'data-turbolinks-track': 'reload'
+
   body
     = render 'layouts/admin_header'
     .container
