--- a/app/views/teams/my.html.slim
+++ b/app/views/teams/my.html.slim
@@ -1,7 +1,8 @@
-h1 Teams
+h1 My teams
 
 div#teams
-  teams
+  teams my=true
 
 = javascript_pack_tag 'teams', 'data-turbolinks-track': 'reload'
 = stylesheet_pack_tag 'teams', 'data-turbolinks-track': 'reload', media: 'all'
+
