Added playrix logo

--- a/app/assets/stylesheets/footer.scss
+++ b/app/assets/stylesheets/footer.scss
@@ -22,6 +22,10 @@ footer {
   clear: left;
 }
 
+.no-space {
+  padding-left: 0px;
+}
+
 .full-height {
   min-height: 100%;
   height: auto !important;
