--- a/app/views/layouts/_footer.html.slim
+++ b/app/views/layouts/_footer.html.slim
@@ -22,3 +22,6 @@ footer
         .sponsor-item
           = link_to 'http://www.huawei.com/en/' do
             = image_tag 'huawei.png'
+        .sponsor-item.no-space
+          = link_to 'https://www.playrix.ru' do
+            = image_tag 'playrix.png'
