--- a/app/views/participants/_form.html.slim
+++ b/app/views/participants/_form.html.slim
@@ -20,6 +20,7 @@
     = ff.input :birth_date, as: :date, start_year: Date.current.year - 100, end_year: Date.current.year, required: true, default: nil, include_blank: true
     = f.input :tshirt, as: :select, collection: Participant.tshirts.map(&:first)
     = f.input :delegation_id, as: :select, collection: participant.camp.delegations.order(name: :asc)
+    = ff.input :food_limitations, as: :text, label: 'Tell us if you have any food limitations'
     = ff.input :needs_visa, as: :boolean, label: 'I need visa to get to Petrozavodsk'
     .for_visa
       .panel.panel-default
