Added MEYVN Digital as a sponsor

--- a/app/views/layouts/_footer.html.slim
+++ b/app/views/layouts/_footer.html.slim
@@ -19,9 +19,12 @@ footer
         .sponsor-item
           = link_to 'http://botaninvestments.com' do
             = image_tag 'botan.png'
+        .sponsor-item
+          = link_to 'https://meyvndigital.co.uk' do
+            = image_tag 'meyvndigital.png'
         / .sponsor-item
         /   = link_to 'http://www.huawei.com/en/' do
         /     = image_tag 'huawei.png'
-        .sponsor-item.no-space
+        / .sponsor-item.no-space
           = link_to 'https://www.playrix.ru' do
             = image_tag 'playrix.png'
