Changed ACM workshops url

--- a/app/views/layouts/_footer.html.slim
+++ b/app/views/layouts/_footer.html.slim
@@ -5,7 +5,7 @@ footer
         h4 Partners
       .sponsors.vcenter
         .sponsor-item
-          = link_to 'https://it-edu.mipt.ru/ru/about_workshops' do
+          = link_to 'https://it-edu.mipt.ru/pages/workshops/?lang=en' do
             = image_tag asset_pack_path('images/msc_workshops.png')
       .vcenter.sponsors-title
         h4 Sponsors
