Fixed sponsors and badge ICPC logo

--- a/app/views/admin/camps/badges.html.slim
+++ b/app/views/admin/camps/badges.html.slim
@@ -16,7 +16,7 @@
       .camp-badge_body-camp
         = @camp.badge_info
     .camp-badge_footer
-      = image_tag asset_pack_path('images/icpc_logo.png'), class: 'icpc'
+      = image_tag asset_pack_path('images/icpc_v2.png'), class: 'icpc'
       /.sponsors
         = image_tag 'yandex.png', class: 'camp-badge_footer-sponsor yandex'
         = image_tag 'aim_tech.png', class: 'camp-badge_footer-sponsor aim_tech'
