--- a/app/views/layouts/_footer.html.slim
+++ b/app/views/layouts/_footer.html.slim
@@ -19,7 +19,7 @@ footer
         .sponsor-item
           = link_to 'http://botaninvestments.com' do
             = image_tag asset_pack_path('images/botan.png')
-        .sponsor-item
+        /.sponsor-item
           = link_to 'https://meyvndigital.co.uk' do
             = image_tag asset_pack_path('images/meyvndigital.png')
         / .sponsor-item
