--- a/app/views/layouts/_footer.html.slim
+++ b/app/views/layouts/_footer.html.slim
@@ -22,9 +22,9 @@ footer
         /.sponsor-item
           = link_to 'https://meyvndigital.co.uk' do
             = image_tag asset_pack_path('images/meyvndigital.png')
-        / .sponsor-item
-        /   = link_to 'http://www.huawei.com/en/' do
-        /     = image_tag 'huawei.png'
-        / .sponsor-item.no-space
+        .sponsor-item
+          = link_to 'http://www.huawei.com/en/' do
+            = image_tag asset_pack_path('images/huawei.png')
+        /.sponsor-item.no-space
           = link_to 'https://www.playrix.ru' do
             = image_tag 'playrix.png'
